# pythonasia2026

./: 20260321slide.tex  README.md  pyproject.toml  script.md  test_useless.py  useless.py
voice/olds/: README.md
